players list ok

--- a/index.html
+++ b/index.html
@@ -5,9 +5,161 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Football-Page</title>
+    <!-----link area start-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+   <!-----link area end-->
 </head>
 welcome to my football page.
 <body>
-    
+    <!-- !header start -->
+
+    <!-- !header end -->
+
+    <!-- !body section-1 start -->
+<section>
+    <div class="player-list">
+        <div class="player-detail">
+            <img src="images/players/player-1.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-2.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-3.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-4.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-5.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-6.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-7.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-8.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-9.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-10.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-11.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-12.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-13.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-14.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+        <div class="player-detail">
+            <img src="images/players/player-15.png" alt="">
+            <h2 class="player-name"> Naymer jr.</h2>
+            <div class="player-info">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-- !body section-1 end -->
+
+    <!---!body section-2 start -->
+<section class="world-events">
+    <div class="events">
+        <div class="copa-america-2021">
+            <h2 class="Highlights">All Highlights Copa America 2021</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a target="_blank" href="https://www.youtube.com/watch?v=6tLxv5EsszA"> watch now</a>
+        </div>
+        <div class="copa-2021"><img src="images/copa-2021.png" alt=""></div>
+    </div>
+    <div class="events">
+        <div class="euro-cup-2021"><img src="images/euro-2021.png" alt=""></div>
+        <div class="euro-2021">
+            <h2 class="Highlights">All Highlights Euro Cup 2021</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> watch now</a>
+        </div>
+    </div>
+    <div class="events">
+        <div class="world-cup">
+            <h2 class="Highlights">Comming Soon Quater World Cup 2022</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing </p>
+            <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> know more</a>
+        </div>
+        <div class="wordlcup-2022"><img src="images/worldcup-2022.png" alt=""></div>
+    </div>
+
+</section>
+
+
+     <!---!body section-2 end -->
 </body>
 </html>
