--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
    <!-----link area end-->
 </head>
@@ -138,10 +139,10 @@ welcome to my football page.
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <a target="_blank" href="https://www.youtube.com/watch?v=6tLxv5EsszA"> watch now</a>
         </div>
-        <div class="copa-2021"><img src="images/copa-2021.png" alt=""></div>
+        <div id="copa-2021"><img src="images/copa-2021.png" alt=""></div>
     </div>
     <div class="events">
-        <div class="euro-cup-2021"><img src="images/euro-2021.png" alt=""></div>
+        <div id="euro-cup-2021"><img src="images/euro-2021.png" alt=""></div>
         <div class="euro-2021">
             <h2 class="Highlights">All Highlights Euro Cup 2021</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -154,12 +155,30 @@ welcome to my football page.
             <p> Lorem ipsum dolor sit amet consectetur adipisicing </p>
             <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> know more</a>
         </div>
-        <div class="wordlcup-2022"><img src="images/worldcup-2022.png" alt=""></div>
+        <div id="wordlcup-2022"><img src="images/worldcup-2022.png" alt=""></div>
     </div>
 
 </section>
 
-
      <!---!body section-2 end -->
+     <!-----fotter start----->
+<section class="fotter-part">
+    <div class="fotter">
+        <div>
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div id="icons">
+            <i class="fa fa-dribbble"></i>    
+            <i class="fa fa-instagram"></i>    
+            <i class="fa fa-twitter"></i>    
+            <i class="fa fa-youtube"></i>    
+        </div>
+        <div id="copyright">
+            <p>Copyright <span><i class="fa fa-copyright"></i></span> 2022 Football</p>
+        </div>
+    </div>
+</section>
+
+     <!-----fotter end----->
 </body>
 </html>
