--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
     <link rel="stylesheet" href="style.css">
    <!-----link area end-->
 </head>
-welcome to my football page.
 <body>
     <!-- !header start -->
+<div class="header-part">
+    <div class="welcom-part">
+        <h1 class="welcome-talk" >Welcome To MY Football Page - 2022</h1>
+        <a id="live-watch" target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> live watch <i class='fa fa-sign-in'></i></a>
+    </div>
+    <div>
+        <img src="images/banner.png" alt="">
+    </div>
+
+</div>
 
     <!-- !header end -->
 
@@ -137,7 +146,7 @@ welcome to my football page.
         <div class="copa-america-2021">
             <h2 class="Highlights">All Highlights Copa America 2021</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a target="_blank" href="https://www.youtube.com/watch?v=6tLxv5EsszA"> watch now</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=6tLxv5EsszA"> watch now <i class='fa fa-sign-in'></i></a>
         </div>
         <div id="copa-2021"><img src="images/copa-2021.png" alt=""></div>
     </div>
@@ -146,14 +155,14 @@ welcome to my football page.
         <div class="euro-2021">
             <h2 class="Highlights">All Highlights Euro Cup 2021</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> watch now</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> watch now <i class='fa fa-sign-in'></i></a>
         </div>
     </div>
     <div class="events">
         <div class="world-cup">
             <h2 class="Highlights">Comming Soon Quater World Cup 2022</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing </p>
-            <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> know more</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> know more <i class='fa fa-sign-in'></i></a>
         </div>
         <div id="wordlcup-2022"><img src="images/worldcup-2022.png" alt=""></div>
     </div>
