--- a/index.html
+++ b/index.html
@@ -35,105 +35,105 @@
             <img src="images/players/player-1.png" alt="">
             <h2 class="player-name"> Naymer jr.</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Neymar da Silva Santos Jr., commonly known as Neymar, is a Brazilian professional footballer who plays as a forward or winger for the French club Paris Saint-Germain and the Brazilian national team. He is considered one of the emerging footballers in the modern world.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-2.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Lionel Messi </h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Lionel Andres “Leo” Messi is an Argentine professional footballer who plays as an attacking player for the Argentine national football team. He is currently playing for the Argentina national team. He last played for Barcelona in club football. He is currently a free agent.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-3.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Cristiano Ronaldo </h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Cristiano Ronaldo or Cristiano Ronaldo dos Santos Aveiro GOIH COM is a Portuguese professional footballer who plays as a forward in Serie A and Club Juventus and the Portuguese national team.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-4.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Paolo DiBalla</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Paolo Bruno Axel Dibala is an Argentine professional footballer who has played as a forward for Italian club Juventus and the Argentine national football team.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-5.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Mesut Ozil </h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Mesut Ozil is a German footballer who plays for Premier League club Arsenal and the German national football team. Ozil has been playing for the German age group since 2006 and the German national football team since 2009.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-6.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Mauro Icardi</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Mauro Emanuel Icardi Rivero is an Argentine professional footballer who plays for Serie A club Inter Milan.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-7.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Anhel di Maria</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Anhel Fabian di Maria Arnandez is an Argentine footballer who currently plays as a winger for the French club PSG and the Argentine national football team. He has several nicknames: "El Anhelito", "The Mahia", "El Flaco", "El Pibito" and "Fideo".</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-8.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Killian Mbabane</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Killian Sanmi Mbabe Latin is a French professional footballer. He has played for Paris Saint-Germain and the French national football team on loan from Monaco as a striker. After playing in the Under-16 and Under-19 stages, MBAP made its debut for the French national team in 2016. </p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-9.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Mohammed Salah</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Mohamed Salah Ghale is an Egyptian professional footballer who plays as a forward in the popular British club Liverpool and the Egyptian national team.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-10.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Harry Kane</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Harry Edward Kane is an English professional footballer who played for Tottenham Hotspur and the England national football team in the English Premier League as an attacking player.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-11.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Kevin de Bruyne</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Kevin de Bruyne is a Belgian professional footballer. He is an attacking midfielder for the Belgian national football team and Manchester City Football Club. He is one of the best play-makers of the present time.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-12.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Philippe Coutinho</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Philippi Coutinho Correa is a Brazilian professional footballer who plays as an attacking midfielder or left winger for German club Bayern Munich and the Brazilian national team. Coutinho was born and raised in Rio de Janeiro, Brazil.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-13.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Gareth Bell</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Gareth Frank Bell is a Welsh professional footballer. He currently plays for La Liga club Real Madrid, the top tier of the Spanish professional football league, as an attacking player.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-14.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Giorgio Chileni</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Giorgio Chiellini is an Italian professional footballer. He is currently at the top of the Italian professional football league, playing for A's club Juventus and the Italian national team as a defender.</p>
             </div>
         </div>
         <div class="player-detail">
             <img src="images/players/player-15.png" alt="">
-            <h2 class="player-name"> Naymer jr.</h2>
+            <h2 class="player-name"> Paul Pogba</h2>
             <div class="player-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, sed!</p>
+                <p>Paul Pogba is a French footballer. He has played for Premier League teams Manchester United and France. He basically plays in midfield.</p>
             </div>
         </div>
     </div>
@@ -145,7 +145,7 @@
     <div class="events">
         <div class="copa-america-2021">
             <h2 class="Highlights">All Highlights Copa America 2021</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p> Copa America is the biggest tournament for South American Nation.</p>
             <a target="_blank" href="https://www.youtube.com/watch?v=6tLxv5EsszA"> watch now <i class='fa fa-sign-in'></i></a>
         </div>
         <div id="copa-2021"><img src="images/copa-2021.png" alt=""></div>
@@ -154,14 +154,14 @@
         <div id="euro-cup-2021"><img src="images/euro-2021.png" alt=""></div>
         <div class="euro-2021">
             <h2 class="Highlights">All Highlights Euro Cup 2021</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p> Euro Cup is the biggest tournament for the European  Nation.</p>
             <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> watch now <i class='fa fa-sign-in'></i></a>
         </div>
     </div>
     <div class="events">
         <div class="world-cup">
             <h2 class="Highlights">Comming Soon Quater World Cup 2022</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing </p>
+            <p> World largest Football tournament in the world is World Cup. The next World Cup 2022 is hosted by The Quarter. </p>
             <a target="_blank" href="https://www.youtube.com/watch?v=Hb2RpWKqF0E"> know more <i class='fa fa-sign-in'></i></a>
         </div>
         <div id="wordlcup-2022"><img src="images/worldcup-2022.png" alt=""></div>
